--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <ul>
-  <li><a routerLink="">Home</a></li>
-  <li><a routerLink="about/48">About</a></li>
+  <li><a routerLink=""><b>Peliculas</b></a></li>
+  <li><a routerLink="about/48">Información</a></li>
 </ul>
 
 <router-outlet></router-outlet>
