--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:300,700');
 
 body{
-    background: #2E9CE6;
+    background: #aa0b26;
     padding: 3em;
     font-family: 'Raleway', 'Arial';
     color: #FFF;
